--- a/.gitattributes
+++ b/.gitattributes
@@ -72,3 +72,4 @@
 /Assets/TextMesh[[:space:]]Pro/Fonts/LiberationSans.ttf filter=lfs diff=lfs merge=lfs -text
 /Assets/TextMesh[[:space:]]Pro/Resources/Fonts[[:space:]]&[[:space:]]Materials/LiberationSans[[:space:]]SDF.asset filter=lfs diff=lfs merge=lfs -text
 /Assets/TextMesh[[:space:]]Pro/Sprites/EmojiOne.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Scenes/Scene.unity filter=lfs diff=lfs merge=lfs -text
