--- a/.gitattributes
+++ b/.gitattributes
@@ -73,3 +73,4 @@
 /Assets/TextMesh[[:space:]]Pro/Resources/Fonts[[:space:]]&[[:space:]]Materials/LiberationSans[[:space:]]SDF.asset filter=lfs diff=lfs merge=lfs -text
 /Assets/TextMesh[[:space:]]Pro/Sprites/EmojiOne.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Scenes/Scene.unity filter=lfs diff=lfs merge=lfs -text
+/Assets/suitData.csv filter=lfs diff=lfs merge=lfs -text
