--- a/.gitattributes
+++ b/.gitattributes
@@ -74,3 +74,5 @@
 /Assets/TextMesh[[:space:]]Pro/Sprites/EmojiOne.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Scenes/Scene.unity filter=lfs diff=lfs merge=lfs -text
 /Assets/suitData.csv filter=lfs diff=lfs merge=lfs -text
+/Assets/MoCap.mocap filter=lfs diff=lfs merge=lfs -text
+/Assets/mocap.csv filter=lfs diff=lfs merge=lfs -text
