--- a/.gitattributes
+++ b/.gitattributes
@@ -821,3 +821,21 @@
 /Assets/Prefabs/Knife/material/textures/tanto_Metallic.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Prefabs/Knife/material/textures/tanto_Normal.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Prefabs/Knife/model/tracker.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Knife[[:space:]]Idle.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Right[[:space:]]Turn.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Stabbing-2.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Stabbing-3.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Walking[[:space:]]Left[[:space:]]Turn.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Walking.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Animations/Knife[[:space:]]Idle.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Animations/Right[[:space:]]Turn.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Animations/Stabbing-2.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Animations/Stabbing-3.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Animations/Stabbing.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Animations/Walking.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Sophie.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Textures/Ch02_1001_Diffuse.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Textures/Ch02_1001_Glossiness.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Textures/Ch02_1001_Normal.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Textures/Ch02_1002_Diffuse.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/Sophie/Textures/Ch02_1002_Normal.png filter=lfs diff=lfs merge=lfs -text
