--- a/.gitattributes
+++ b/.gitattributes
@@ -839,3 +839,7 @@
 /Assets/Prefabs/Sophie/Textures/Ch02_1001_Normal.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Prefabs/Sophie/Textures/Ch02_1002_Diffuse.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Prefabs/Sophie/Textures/Ch02_1002_Normal.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Sit[[:space:]]To[[:space:]]Stand.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Sitting[[:space:]]Idle.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Stabbing-4.fbx filter=lfs diff=lfs merge=lfs -text
+/Assets/Animations/Stand[[:space:]]To[[:space:]]Sit.fbx filter=lfs diff=lfs merge=lfs -text
