--- a/.gitattributes
+++ b/.gitattributes
@@ -847,3 +847,9 @@
 /Assets/Scenes/SampleScene/Lightmap-0_comp_dir.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Scenes/SampleScene/Lightmap-0_comp_light.exr filter=lfs diff=lfs merge=lfs -text
 /Assets/Scenes/SampleScene/ReflectionProbe-3.exr filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/RawWoodenFurnitureFree/Textures/BedsV1.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/RawWoodenFurnitureFree/Textures/Cabinets00_albedoV1.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/RawWoodenFurnitureFree/Textures/Chair02_albedoV2.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/RawWoodenFurnitureFree/Textures/Stool01_albedoV1.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/RawWoodenFurnitureFree/Textures/Table01_albedoV2.png filter=lfs diff=lfs merge=lfs -text
+/Assets/Prefabs/RawWoodenFurnitureFree/Textures/Table02_albedoV1.png filter=lfs diff=lfs merge=lfs -text
