--- a/.gitattributes
+++ b/.gitattributes
@@ -854,3 +854,4 @@
 /Assets/Prefabs/RawWoodenFurnitureFree/Textures/Table01_albedoV2.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Prefabs/RawWoodenFurnitureFree/Textures/Table02_albedoV1.png filter=lfs diff=lfs merge=lfs -text
 /Assets/Prefabs/Teslasuit_Man_Haptics[[:space:]]Variant.prefab filter=lfs diff=lfs merge=lfs -text
+/Assets/MoCap.csv filter=lfs diff=lfs merge=lfs -text
